--- a/AN-15-266.tex
+++ b/AN-15-266.tex
@@ -63,9 +63,9 @@
 % 2. **DO NOT use %**                  to comment out sections of the abstract: the extractor will still grab those lines (and they won't be comments any longer!).
 % 3. For PASs: **DO NOT use tex macros**         in the abstract: CDS MathJax processor used on the abstract doesn't understand them _and_ will only look within $$. The abstracts for papers are hand formatted so macros are okay.
 \abstract{
-   We present a search for direct stop quark production in the opposite-sign dilepton channel using $pp$ collision data at $\sqrt{s}$ = 13 TeV collected by the CMS detector.
-   The search is done in both the $ee$, $e\mu$ and $\mu\mu$ channels and involves a base selection of two jets, of which at least one is $b$-tagged, and missing transverse energy.
-   The signal regions are defined using "stransverse mass" variables (\mtll, \mtbb, \mtlblb), which efficiently separate the signal from the dominant \ttbar background.
+   We present a search for the production of dark matter particles coupled to the standard model top quark via a scalar or pseudoscalar messenger particle. The search is conducted in the opposite-sign dilepton channel using $pp$ collision data at $\sqrt{s}$ = 13 TeV collected by the CMS detector.
+   Search regions are  split in same-flavor ($ee$, $\mu\mu$) and different-flavor ($e\mu$) channels after a baseline selection of two jets, of which at least one is $b$-tagged, and large missing transverse energy.
+   The signal regions are defined using the \mtll variable which efficiently separates the signal from the dominant \ttbar background.
 }
 
 % >> PDF Metadata
@@ -75,8 +75,8 @@
 % (2) no %.
 % (3) No curly braces {}.
 \hypersetup{%
-pdfauthor={Robert Schoefbeck, Didar Dobur, Tom Cornelis},%
-pdftitle={Search for scalar top quark pair production in the dilepton final state at sqrt(s) = 13 TeV},%
+pdfauthor={Robert Schoefbeck, Didar Dobur, Tom Cornelis, Steven Lowette},%
+pdftitle={Search for top quark pair production in association with dark matter particles in the dilepton final state at sqrt(s) = 13 TeV},%
 pdfsubject={CMS},%
 pdfkeywords={CMS, physics, SUSY}}
 
