--- a/AN-15-266.tex
+++ b/AN-15-266.tex
@@ -18,7 +18,7 @@
 %%%%%%%%%%%%%%%  Title page %%%%%%%%%%%%%%%%%%%%%%%%
 \cmsNoteHeader{AN-15-266} % This is over-written in the CMS environment: useful as preprint no. for export versions
 % >> Title: please make sure that the non-TeX equivalent is in PDFTitle below
-\title{Search for scalar top quark pair production in the dilepton final state at $\sqrt{s}$ = 13 TeV}
+\title{Search for top quark pair production in association with dark matter particles in the dilepton final state at $\sqrt{s}$~=~13~TeV}
 
 
 
@@ -46,7 +46,6 @@
 \author[University of Ghent]{Robert Schoefbeck}
 \author[University of Ghent]{Didar Dobur}
 \author[University of Ghent]{Tom Cornelis}
-\author[University of Ghent]{Nicolas Bult\'{e}}
 \author[Vrije Universiteit Brussel]{Steven Lowette}
 \author[University Of Florida]{Lesya Shchutska}
 
