--- a/introduction.tex
+++ b/introduction.tex
@@ -1,28 +1,24 @@
 \section{Introduction}
 
-  Supersymmetry (SUSY) is an extension of the Standard Model which provides a solution to the hierarchy problem by explaining why the Higgs mass can be near the electroweak scale without
-  excessive fine tuning. In models where $R$-parity\footnote{$R$ is defined as $R = (-1)^{3(B-L)+2s}$ in which $s$ is spin, $B$ is baryon number and $L$ is lepton number. The value
-  of R is +1 for all Standard Model particles, while it is -1 for the supersymmetric particles. When $R$-parity is conserved, SUSY particles should be produced in pairs, and SUSY particles must decay into another SUSY particle.}
-  is conserved~\cite{Wess:1974tw,Farrar:1978xj}, the lightest supersymmetric particle (LSP) is stable and could be a candidate for the dark matter observed by astrophysicists.
-  Run I LHC data has provided strict limits on the production of generic colored superpartners using final states consisting of jets and missing energy. However, SUSY can still be natural (i.e. without 
-  requiring fine-tuning of model parameters) if the
-  superpartners of the Higgs boson, top quark, and gluon have masses near the electroweak scale~\cite{Barbieri:1987fn,deCarlos1993320,Dimopoulos1995573,Barbieri199676,Papucci:2011wy}. 
-  New search strategies specifically targeted to these scenarios may provide stronger limits than generic searches.
+Numerous astronomical observations suggest the existence of a substance that permeates the universe and appears to only interact significantly with ordinary matter via gravity. 
+Attempts to directly observe it have been unsuccessful, but this mysterious ``dark matter'' is estimated to make up over a quarter of the total mass-energy in the universe. 
+The possibility that dark matter interacts with ordinary matter by other means besides gravitation remains open, implying dark matter may be produced directly by the LHC. 
+If produced, dark matter particles are practically invisible to the detector and manifest as missing energy in the event. 
+This document describes a search for dark matter produced in association with $\ttbar$ in the dilepton channel with data collected by the CMS detector in 2016 of $\PP$ collisions at $13\:\TeV$.
 
-  This note presents results of a search for scalar top partners produced in $pp$ collisions at a center-of-mass energy of $\sqrt{s}$ = 13 TeV. 
-  As we focus on $R$-parity conserving models, the top squarks, denotes as \sTop, must always be produced in pairs $\sTop\PASQt$.
-  These top squarks can have a variety of decay modes depending on the mass hierarchy of the SUSY particles. In this analysis, we consider the
-  top squark decay mode $\sTop \to t\chiz_1$, where $t$ and $\chiz_1$ are the top quark and the lightest neutralino respectively. 
-  This mode is represented by the Simplified Model Spectra (SMS)~\cite{Alwall:2008ag,Alwall:2008va,Alves:2011wf} labeled "T2tt" and is shown in Figure \ref{fig:T2tt}.
+The simplest and most relevant model for dark matter production with $\ttbar$ proposes a spin-$0$ interaction between dark matter (DM) and Standard Model (SM) particles. 
+If the new physics associated with DM satisfies minimal flavour violation, where the couplings between the mediator and the SM particles are Yukawa-type, then heavy flavour (top quark) production is favoured. 
+At leading order, the process is gluon-induced and a $\ttbar$ pair is produced with a pair of DM fermions (Fig.~\ref{fig:ttdm_diagram}). 
+%The DM fermions can be Dirac or Majorana with the difference being a factor of two in the cross section; they are taken to be Dirac fermions in the signal samples used in this analysis.
 
-  \begin{figure}
-    \centering\includegraphics[width=10cm]{figures/T2tt.png}
-    \caption{Diagram representing the simplified model "T2tt" of direct top squark production with decay via an on-shell top quark}
-    \label{fig:T2tt}
-  \end{figure}
+\begin{figure}
+\centering\includegraphics[width=8cm]{figures/ttbarDM.png}
+\caption{Leading order diagram in simplified model for $\ttbar+$DM production.}
+\label{fig:ttdm_diagram}
+\end{figure}
 
   We use events with two opposite-sign isolated leptons, and two jets with at least one b-tagged jet to perform the search. The stransverse
-  mass variable \mtll~\cite{Lester:1999tx} is used to separate the stop signal from the Standard Model background, which consists primarily of \ttbar decaying into dileptons.
+  mass variable \mtll~\cite{Lester:1999tx} is used to separate the dark matter signal from the Standard Model background, which consists primarily of \ttbar pairs decaying to the dilepton channel.
   The stransverse mass is a generalization of the transverse mass \mt to a system of pair produced particles that decay semi-invisibly. 
   In the case of $W$ boson production, \mt is formed from the transverse momentum of a high \pt lepton (from the $W$ decay) and the missing transverse momentum (\met) in the event, 
   which is assumed to come from the corresponding neutrino. The definition of \mt in the limit where the masses of the daughter particles can be neglected is given by
@@ -57,7 +53,7 @@
 
   It can be shown~\cite{Lester:1999tx} that this definition of \mtll has the same convenient property as the transverse mass: 
   it must be less than the mass of the pair-produced semi-invisibly decaying particle.
-  In the case of stop ($\sTop \to t\chiz_1$) searches in the dilepton channel, the primary challenge comes from separating SM \ttbar 
+  In the case of \ttbar+DM searches in the dilepton channel, the primary challenge comes from separating SM \ttbar 
   production from the signal, since the composition of the final states is identical except
   for invisible particles. In dileptonic \ttbar events the final state is
 
@@ -67,18 +63,9 @@
 
   Assuming that the contribution of the other products $X$ to the \met is not large, the assumptions
   made in the definition of \mtll hold for the lepton-\met system and its value has an upper
-  bound at the $W$ mass. On the other hand, stop pair production events with a dileptonic final
-  state will have at least four invisible particles so long as lepton number and $R$-parity are both
-  conserved. The stop decays can proceed differently depending on the model considered but a
-  typical example for the models used here is
-
-  \begin{equation*}
-    pp \to \tilde{t} + \bar{\tilde{t}} + X \to \bar{\chiz_1}t + \chiz_1\bar{t} + X \to \bar{\chiz_1}bW^+ + \chiz_1\bar{b}W^- + X \to \bar{\chiz_1}b\ell\bar{\nu}_\ell + \chiz_1\bar{b}\bar{\ell}\nu_\ell + X.  
-  \end{equation*}
-
-  Now there are
-  two invisible particles on each side of the decay, and so the partition of the
-  \met into two components no longer has an upper bound at the W mass.
+  bound at the $W$ mass. On the other hand, dark matter production according to Fig.~\ref{ig:ttdm_diagram}
+  provides two extra invisible particles.
+  Hence, partitioning of  \met into two components no longer needs to respect an upper bound at the W mass.
 
   Similarly, one is also able to construct two other variants on the \mtll variable, which take into account the $b$-jets and are expected to have an upper bound at the top mass:
 
