removing unnecessary reference to SUSY

--- a/objectSelection.tex
+++ b/objectSelection.tex
@@ -62,7 +62,7 @@
       \end{equation}
       The logic behind this condition is that in addition to being locally isolated by $I_\text{mini}$, the lepton should carry the major part of the energy of the corresponding jet. If the $p_T^\text{ratio}$ does
       not pass the threshold, the lepton is still recovered if the overlap with the jet is accidental which is decided by the $p_T^\text{rel}$ requirement.
-      For reference, the multi-isolation working points used in the SUSY group are summarized in Table~\ref{table:multiIsoWP}.
+      For reference, the multi-isolation working points group are summarized in Table~\ref{table:multiIsoWP}.
       \input{tables/multiIsoWP}
     \subsubsection{Lepton selection efficiencies}
       The lepton identification and isolation efficiencies are measured per lepton leg in $Z/\gamma^*\rightarrow \ell\ell$ events using the tag-and-probe technique~\cite{twiki:SF}.
