--- a/tables/yieldsTable.tex
+++ b/tables/yieldsTable.tex
@@ -2,17 +2,18 @@
   \setlength\tabcolsep{3pt}
   \footnotesize
   \begin{tabular}{l|ccccc|c|c|ccc}
-		      &    \rotatebox[origin=c]{50}{$t\bar{t}$} &   \rotatebox[origin=c]{50}{$t\bar{t}Z$} & \rotatebox[origin=c]{50}{$t\bar{t}H/t\bar{t}W$} & \rotatebox[origin=c]{50}{multiBoson} & \rotatebox[origin=c]{50}{DY}       & \rotatebox[origin=c]{50}{total MC}      &          \rotatebox[origin=c]{50}{data} &   \rotatebox[origin=c]{50}{T2tt(650,1)} & \rotatebox[origin=c]{50}{T2tt(500,250)}\\ 
+		      &    \rotatebox[origin=c]{50}{$t\bar{t}$} &   \rotatebox[origin=c]{50}{$t\bar{t}Z$} & \rotatebox[origin=c]{50}{$t\bar{t}H/t\bar{t}W$} & \rotatebox[origin=c]{50}{multiBoson} & \rotatebox[origin=c]{50}{DY}       & \rotatebox[origin=c]{50}{total MC}      &          \rotatebox[origin=c]{50}{data} &   \rotatebox[origin=c]{50}{$S(m_\chi=1,m_\phi=10)$} & \rotatebox[origin=c]{50}{$PS(m_\chi=1,m_\phi=10)$}\\
 	\hline
-	2 opposite charge leptons ($e$ or $\mu$) &     135676 &        141 &        224 &      14156 &     747949 &     898144 &        854558 &         22 &         92\\ 
-	$N_\text{jets} \geq 2$                   &      92924 &        129 &        205 &       2152 &      37391 &     132802 &        128588 &         19 &         74\\ 
-	$N_\text{b-jets} \geq 1$                 &      73776 &        101 &        153 &        213 &       4031 &      78274 &         69783 &         15 &         59\\  
-	$\met > 80$ GeV                          &      29179 &         49 &         77 &         66 &         84 &      29455 &         25433 &         14 &         49\\  
-	$S > 5$                                  &      26972 &         42 &         61 &         59 &         59 &      27193 &         23573 &         14 &         47\\ 
-        $\cos\Delta\phi(\met, j_1) < 0.8$        &      25654 &         40 &         57 &         56 &         49 &      25857 &         22483 &         13 &         45\\ 
-	$\Delta\phi(\met, j_2) > 0.25$           &      24180 &         37 &         53 &         54 &         44 &      24367 &         21175 &         12 &         42\\ 
-	$\mtll > 100$ GeV                        &        111 &       3.08 &       1.57 &       1.00 &       1.10 &        117 &           116 &       7.19 &         11\\ 
-	$\mtll > 140$ GeV                        &       0.78 &       1.16 &       0.45 &       0.26 &       0.29 &       2.94 &             4 &       4.94 &       3.78\\ 
+	2 opposite charge leptons ($e$ or $\mu$) &     135676 &        141 &        224 &      14156 &     747949 &     898144 &        854558 &      73.86 &       3379.41\\ 
+	$N_\text{jets} \geq 2$                   &      92924 &        129 &        205 &       2152 &      37391 &     132802 &        128588 &      57.72 &       2568.67\\  
+	$N_\text{b-jets} \geq 1$                 &      73776 &        101 &        153 &        213 &       4031 &      78274 &         69783 &      45.99 &       2019.49\\  
+	$\met > 80$ GeV                          &      29179 &         49 &         77 &         66 &         84 &      29455 &         25433 &      31.75 &        963.28\\  
+	$S > 5$                                  &      26972 &         42 &         61 &         59 &         59 &      27193 &         23573 &      30.50 &        889.37\\  
+        $\cos\Delta\phi(\met, j_1) < 0.8$        &      25654 &         40 &         57 &         56 &         49 &      25857 &         22483 &      28.94 &        845.31\\   
+	$\Delta\phi(\met, j_2) > 0.25$           &      24180 &         37 &         53 &         54 &         44 &      24367 &         21175 &      27.56 &        795.71\\
+	$\mtll > 100$ GeV                        &        111 &       3.08 &       1.57 &       1.00 &       1.10 &        117 &           116 &       5.96 &         23.68\\  
+	$\mtll > 140$ GeV                        &       0.78 &       1.16 &       0.45 &       0.26 &       0.29 &       2.94 &             4 &       1.89 &          4.27\\ 
+
     \end{tabular}
     \caption{Cutflow table showing the background, data and signal yields at the different stages of the selection}
     \label{table:yields}
