--- a/introduction.tex
+++ b/introduction.tex
@@ -63,7 +63,7 @@ At leading order, the process is gluon-induced and a $\ttbar$ pair is produced w
 
   Assuming that the contribution of the other products $X$ to the \met is not large, the assumptions
   made in the definition of \mtll hold for the lepton-\met system and its value has an upper
-  bound at the $W$ mass. On the other hand, dark matter production according to Fig.~\ref{ig:ttdm_diagram}
+  bound at the $W$ mass. On the other hand, dark matter production according to Fig.~\ref{fig:ttdm_diagram}
   provides two extra invisible particles.
   Hence, partitioning of  \met into two components no longer needs to respect an upper bound at the W mass.
 
