--- a/AN-15-266.tex
+++ b/AN-15-266.tex
@@ -98,7 +98,7 @@ pdfkeywords={CMS, physics, SUSY}}
 \input{backgrounds}
 \input{systematics}
 \input{limit}
-\newpage
+\clearpage
 \bibliography{auto_generated}
 \newpage
 \appendix
