limit update TTbarDM

--- a/limit.tex
+++ b/limit.tex
@@ -59,15 +59,35 @@
     \label{fig:signalRegions-all}
   \end{figure}
 
+  \begin{table}[ht]
+  \begin{center}
+  \caption{Expected limits for scalar models.}\label{limit_S_exp}
+  \input{tables/S_exp}
+  \end{center}
+  \end{table}
+
+  \begin{table}[ht]
+  \begin{center}
+  \caption{Observed limits for scalar models.}\label{limit_S_obs}
+  \input{tables/S_obs}
+  \end{center}
+  \end{table}
+
+  \newpage
+  \begin{table}[ht]
+  \begin{center}
+  \caption{Expected limits for pseudo-scalar models.}\label{limit_PS_exp}
+  \input{tables/PS_exp}
+  \end{center}
+  \end{table}
+
+  \begin{table}[ht]
+  \begin{center}
+  \caption{Observed limits for pseudo-scalar models.}\label{limit_PS_obs}
+  \input{tables/PS_obs}
+  \end{center}
+  \end{table}
+
   Using the above yields and uncertainties, we compute 95\% confidence level (CL) upper limits on the new physics cross section using the CLs method.
-  The results are shown in Figure~\ref{fig:limit} as a function of $m_{\sTop}$ and $m_{\chiz}$. The observed, $\pm 1 \sigma_\text{theory}$ observed, median expected, and  $\pm 1 \sigma_\text{experiment}$ expected
-  bounds are shown.
+  Expected and observed limits for scalar and pseudoscalar models are shown in Tab.~\ref{limit_S_exp}--Tab.~\ref{limit_PS_obs}.
 
-  \begin{figure}
-    \centering
-    \includegraphics[width=0.8\textwidth]{figures/limit/limitXSEC.pdf}
-    \caption{95\% CL expected and observed limits for the $\sTop \to t\chiz$ decay mode in the $m_{\sTop}$, $m_{\chiz}$ mass plane.}
-    \label{fig:limit}
-  \end{figure}
-
-  
