--- a/systematics.tex
+++ b/systematics.tex
@@ -34,7 +34,8 @@ w(\pt) = e^{0.148-0.00129\pt}.
 \end{equation}
 The reweighting is applied such that it preserves the normalization of the sample, and the difference relative to the results obtained with the unweighted sample is assigned as a systematic uncertainty.
 
-For the signals, an uncertainty on initial-state radiation (ISR) is applied, based on the number of jets which are not matched to simulated particles descending from top quarks, W,Z or Higgs bosons or SUSY particles. The event is reweighted based on the distribution of this observables but correcting for the total change in the crosssection of the respective mass point.
+For the signals, an uncertainty on initial-state radiation (ISR) is applied, based on the number of jets which are not matched to simulated particles descending from top quarks, W,Z or Higgs bosons. 
+The event is reweighted based on the distribution of this observables but correcting for the total change in the crosssection of the respective mass point.
 The factorization and renormalization scale are each changed by a factor of 0.5 and 2 and the envelope of variations on the predicted signal yield is assigned as systematic; anti-correlated variations
 are not considered.
 Finally, uncertainties in the signal cross section are also taken into account.
