first set of changes

--- a/AN-15-266.tex
+++ b/AN-15-266.tex
@@ -5,9 +5,9 @@
 % The last version of these macros found before the maketitle will be the one on the front page,
 % so only the main file is tracked.
 % Do not edit by hand!
-\RCS$Revision: 367827 $
+\RCS$Revision: 373342 $
 \RCS$HeadURL: svn+ssh://svn.cern.ch/reps/tdr2/notes/AN-15-266/trunk/AN-15-266.tex $
-\RCS$Id: AN-15-266.tex 367827 2016-09-16 06:55:28Z schoef $
+\RCS$Id: AN-15-266.tex 373342 2016-11-09 12:27:28Z schoef $
 %%%%%%%%%%%%% local definitions %%%%%%%%%%%%%%%%%%%%%
 % This allows for switching between one column and two column (cms@external) layouts
 % The widths should  be modified for your particular figures. You'll need additional copies if you have more than one standard figure size.
@@ -49,6 +49,8 @@
 \author[University of Ghent]{Nicolas Bult\'{e}}
 \author[Vrije Universiteit Brussel]{Steven Lowette}
 \author[University Of Florida]{Lesya Shchutska}
+\author[HEPHY]{Daniel Spitzbart}
+
 
 % >> Date
 % The date is in yyyy/mm/dd format. Today has been
