--- a/samples.tex
+++ b/samples.tex
@@ -2,7 +2,7 @@
 
   \subsection{Data samples}
 
-    This analysis uses 2016 pp collision data at $\sqrt{s}$ = 13 TeV, corresponding to an integrated luminosity of 12.9\fbinv. Events are selected from following double-lepton and single-lepton
+    This analysis uses 2016 pp collision data at $\sqrt{s}$ = 13 TeV, corresponding to an integrated luminosity of 36.4\fbinv. Events are selected from following double-lepton and single-lepton
     primary data sets:
 
     \begin{itemize}
@@ -13,15 +13,18 @@
       \item SingleMuon: backup for $\mu\mu$ and $e\mu$ channels
     \end{itemize}
 
-    For each of the primary data sets, runs 2016B, 2016C and 2016D are considered:
+    For each of the primary data sets, runs 2016B to 2016H are considered:
     \begin{itemize}
-      \item {\verb /<PD>/Run2016B-PromptReco-v2/MINIAOD } (run 272007-275376)
-      \item {\verb /<PD>/Run2016C-PromptReco-v2/MINIAOD } (run 275657-276283)
-      \item {\verb /<PD>/Run2016D-PromptReco-v2/MINIAOD } (run 276315-276811)
-     %\item {\verb /<PD>/Run2016E-PromptReco-v2/MINIAOD } (run 276831-277420)
-     %\item {\verb /<PD>/Run2016F-PromptReco-v2/MINIAOD } (run 277772-)
+      \item {\verb /<PD>/Run2016B-23Sep2016-v3/MINIAOD } (run 272007-275376)
+      \item {\verb /<PD>/Run2016C-23Sep2016-v1/MINIAOD } (run 275657-276283)
+      \item {\verb /<PD>/Run2016D-23Sep2016-v1/MINIAOD } (run 276315-276811)
+      \item {\verb /<PD>/Run2016E-23Sep2016-v1/MINIAOD } (run 276831-277420)
+      \item {\verb /<PD>/Run2016F-23Sep2016-v1/MINIAOD } (run 277772-278808)
+      \item {\verb /<PD>/Run2016G-23Sep2016-v1/MINIAOD } (run 278820-280385)
+      \item {\verb /<PD>/Run2016H-PromptReco-v2/MINIAOD } (run 280919-284035)
+      \item {\verb /<PD>/Run2016H-PromptReco-v3/MINIAOD } (run 284036-284068)
     \end{itemize}
-    and processed using the {\verb Cert_271036-276811_13TeV_PromptReco_Collisions16_JSON } golden JSON file where all CMS subdetectors are flagged as good.
+    and processed using the {\verb Cert_271036-284044_13TeV_23Sep2016ReReco_Collisions16_JSON } golden JSON file where all CMS subdetectors are flagged as good.
 
 
   \subsection{Simulation}
