--- a/tables/eventSelection.tex
+++ b/tables/eventSelection.tex
@@ -10,8 +10,8 @@
                                                    & Flag\_EcalDeadCellTriggerPrimitiveFilter \\
                                                    & Flag\_goodVertices \\
                                                    & Flag\_eeBadScFilter \\
-                                                   & Flag\_BadMuon \\
-                                                   & Flag\_badChargedHadron \\
+                                                   & Flag\_BadMuonSummer2016 \\
+                                                   & Flag\_badChargedHadronSummer2016 \\
                                                    & Flag\_globalTightHalo2016Filter \\
     \hline
     \multicolumn{2}{|l|}{$N_\text{leptons} = 2$, opposite charge} \\
