--- a/tables/leptonSelectionIncludingVeto.tex
+++ b/tables/leptonSelectionIncludingVeto.tex
@@ -8,7 +8,7 @@
      \hline
      \pt             & $> 20\GeV$                  & $> 20\GeV$          & $> 15\GeV$                  & $>15\GeV$ \\
      $|\eta|$        & $< 2.4$                     & $< 2.4$             & $< 2.4$                     & $< 2.4$  \\ 
-     isolation       & multi-iso VT                & multi-iso VT        & mini-iso $< 0.4$            & mini-Iso $< 0.4$\\
+     isolation       & relIso03 $< 0.12$            & relIso03 $< 0.12$    & relIso03 $< 0.4$            & relIso03 $< 0.4$\\
      $|d_{xy}|$      & $< 0.05$                    & $< 0.05$            & $< 0.05$                    & $< 0.05$    \\
      $|d_{z}|$       & $< 0.1$                     & $< 0.1$             & $< 0.1$                     & $< 0.1$  \\
      SIP3D           & $< 4$                       & $< 4$               & $< 4$                       & $< 4$ \\
