--- a/tables/regions80X.tex
+++ b/tables/regions80X.tex
@@ -19,6 +19,6 @@
     \hline
     12         & $240 \leq \mtll$               & $0 \leq \mtlblb$ & $70 \leq \mtbb$ \\
   \end{tabular}
-  \caption{Division of signal regions in bins of \mtll, \mtbb and \mtlblb}
+  \caption{Division of signal regions in bins of \mtll, \mtbb and \mtlblb. \FIXME{Tom, please update.}}
   \label{regions80X}
 \end{table}
