--- a/tables/yieldsTable.tex
+++ b/tables/yieldsTable.tex
@@ -14,6 +14,6 @@
 	$\mtll > 100$ GeV                        &        111 &       3.08 &       1.57 &       1.00 &       1.10 &        117 &           116 &       7.19 &         11\\ 
 	$\mtll > 140$ GeV                        &       0.78 &       1.16 &       0.45 &       0.26 &       0.29 &       2.94 &             4 &       4.94 &       3.78\\ 
     \end{tabular}
-    \caption{Cutflow table showing the background, data and signal yields at the different stages of the selection}
+    \caption{Cutflow table showing the background, data and signal yields at the different stages of the selection. \FIXME{Tom, please update.}}
     \label{table:yields}
   \end{table}
