--- a/trigger.tex
+++ b/trigger.tex
@@ -14,14 +14,15 @@ Table \ref{table:triggers} gives an overview of all triggers used in this analys
 \input{tables/samples-triggers.tex}
 %\subsection{Trigger efficiencies}
 
+% figures from http://schoef.web.cern.ch/schoef/pngEff/
 \begin{figure}
   \centering
   %\subfloat[only isolated double-lepton triggers][only isolated \\ double-lepton triggers]{\includegraphics[width=0.5\textwidth]{figures/trigger/HLT_mumu_pt1_pt2_highEta1_NOAddTrig.png}}
   %\subfloat[including non-isolated double-lepton triggers][including non-isolated \\ double-lepton triggers]{\includegraphics[width=0.5\textwidth]{figures/trigger/HLT_mumu_pt1_pt2_highEta1_DoubleLepTrigOR.png}}\\
   %\subfloat[including single-lepton triggers][including \\ single-lepton triggers]{\includegraphics[width=0.5\textwidth]{figures/trigger/HLT_mumu_pt1_pt2_highEta1_AllTriggersInOR.png}}
-  \subfloat[only isolated double-lepton triggers][only isolated \\ double-lepton triggers]{\includegraphics[width=0.5\textwidth]{figures/trigger/HLT_mumuIso_pt1_pt2_highEta1_veryCoarse.pdf}}
-  \subfloat[including non-isolated double-lepton triggers][including non-isolated \\ double-lepton triggers]{\includegraphics[width=0.5\textwidth]{figures/trigger/HLT_mumuIso_OR_HLT_mumuNoiso_pt1_pt2_highEta1_veryCoarse.pdf}}\\
-  \subfloat[including single-lepton triggers][including \\ single-lepton triggers]{\includegraphics[width=0.5\textwidth]{figures/trigger/HLT_mumuIso_OR_HLT_mumuNoiso_OR_HLT_SingleMu_noniso_pt1_pt2_highEta1_veryCoarse.pdf}}
+  \subfloat[only isolated double-lepton triggers][only isolated \\ double-lepton triggers]{\includegraphics[width=0.5\textwidth]{figures/trigger/HLT_mumuIso_pt1_pt2_highEta1_veryCoarse_BCDEF.pdf}}
+  \subfloat[including non-isolated double-lepton triggers][including non-isolated \\ double-lepton triggers]{\includegraphics[width=0.5\textwidth]{figures/trigger/HLT_mumuIso_OR_HLT_mumuNoiso_pt1_pt2_highEta1_veryCoarse_BCDEF.pdf}}\\
+  \subfloat[including single-lepton triggers][including \\ single-lepton triggers]{\includegraphics[width=0.5\textwidth]{figures/trigger/HLT_mumuIso_OR_HLT_mumuNoiso_OR_HLT_SingleMu_noniso_pt1_pt2_highEta1_veryCoarse_BCDEF.pdf}}
   \caption{Gain in trigger efficiency for the $\mu\mu$ channel by adding non-isolated and single-lepton triggers}
   \label{fig:additionalTriggers}
 \end{figure}
