--- a/ttjets.tex
+++ b/ttjets.tex
@@ -50,8 +50,8 @@ Data control regions are formed to validate MC simulation for these sources and 
 
 \begin{figure}[!hbtp]
 \centering
-\subfloat[]{\includegraphics[scale=0.45]{figures/ttBar/met_control_met_pt.pdf}}
-\subfloat[]{\includegraphics[scale=0.45]{figures/ttBar/met_control_dl_mt2ll.pdf}}
+\subfloat[]{\includegraphics[scale=0.45]{figures/ttBar/met_control_met_pt_v2.pdf}}
+\subfloat[]{\includegraphics[scale=0.45]{figures/ttBar/met_control_dl_mt2ll_v2.pdf}}
 \caption{ \ETmiss and \mtll distribution in the on-Z selection with 0 b-tags.}
 \label{fig:met_tail_controlPlots}
 \end{figure}
@@ -69,7 +69,7 @@ data is dominated by DY with large mismeasurements and that apparently there is 
 \subfloat[Three-lepton control region]{\includegraphics[width=0.35\textwidth]{figures/ttBar/all_dl_mt2ll.pdf}}
 \subfloat[\ttbar 2l vs. 3l]{\includegraphics[width=0.5\textwidth]{figures/ttBar/MC_fake_shape_comparison.png}}
 \caption{Left: \mtll distributions in two control regions enriched by $t\bar{t}$ events. MC yields are normalized to data using the yields at $\mtll<100$ \GeV. Right: Comparison of the three lepton simulation (blue area) 
-and the two-lepton simulation with inverted isolation requirements on one lepton (red line), normalized at $\mtll>100$~\GeV.}
+and the two-lepton simulation with inverted isolation requirements on one lepton (red line), normalized at $\mtll>100$~\GeV. \FIXME{Robert, please update.}}
 \label{fig:ttBar_3l}
 \end{figure}
 
@@ -96,7 +96,7 @@ In addition, we ask $\Njets\geq2$ and $\Nbtags\geq1$ to select a similar phase s
 \centering
 \subfloat[ $\mu\mu\mu$ ]{\includegraphics[scale=0.45]{figures/fakeRate/mumu_loose_mu_log/njet2-btagM-multiIsoWP/l3_miniRelIso.pdf}}
 \subfloat[ eee ]{\includegraphics[scale=0.45]{figures/fakeRate/ee_loose_e_log/njet2-btagM-multiIsoWP/l3_miniRelIso.pdf}}
-\caption{ $I_{\text{rel.mini}}$ and $I_{\text{rel.}}$ distribution of the third non-isolated lepton in the $\mu\mu\mu$ (left) and eee (right) channels. }
+\caption{ $I_{\text{rel.mini}}$ and $I_{\text{rel.}}$ distribution of the third non-isolated lepton in the $\mu\mu\mu$ (left) and eee (right) channels. \FIXME{Tom, please update.}}
 \label{fig:ttBar_FR_controlPlots}
 \end{figure}
 
