--- a/tables/samples-backgrounds2016.tex
+++ b/tables/samples-backgrounds2016.tex
@@ -22,18 +22,24 @@
                             & \verb /DYJetsToLL_M-50_HT-600toInf_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/[Spring16mAOD]-v1/MINIAODSIM                          & 2.72 \\
                             & \verb /DYJetsToLL_M-50_HT-600toInf_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/[Spring16mAOD]_ext1-v1/MINIAODSIM                     & 2.72 \\
      $t\bar{t}$       %      & \verb /TTTo2L2Nu_13TeV-powheg/[Spring16mAOD]-v1/MINIAODSIM                                                                      & 87.31 \\
-                            & \verb /TTTo2L2Nu_13TeV-powheg/[Spring16mAOD*]_ext3-v1/MINIAODSIM						                      & 87.31 \\
-     single $t$             & \verb /ST_tW_top_5f_inclusiveDecays_13TeV-powheg-pythia8_TuneCUETP8M1/[Spring16mAOD]-v2/MINIAODSIM			      & 35.6 \\
+                            & \verb /TTTo2L2Nu_13TeV-powheg/[Spring16mAOD*]_ext3-v1/MINIAODSIM						                                                    & 87.31 \\
+     single $t$             & \verb /ST_tW_top_5f_inclusiveDecays_13TeV-powheg-pythia8_TuneCUETP8M1/[Spring16mAOD]-v2/MINIAODSIM			                        & 35.6 \\
                             & \verb /ST_tW_antitop_5f_inclusiveDecays_13TeV-powheg-pythia8_TuneCUETP8M1/[Spring16mAOD]-v1/MINIAODSIM                          & 35.6 \\
+                            & \verb /ST_t-channel_top_4f_leptonDecays_13TeV-powheg-pythia8_TuneCUETP8M1/[Spring16mAOD]-v1/MINIAODSIM                          & 44.1 \\
+                            & \verb /ST_t-channel_antitop_4f_leptonDecays_13TeV-powheg-pythia8_TuneCUETP8M1/[Spring16mAOD]-v1/MINIAODSIM                      & 26.2 \\
                       %      & \verb /ST_t-channel_4f_leptonDecays_13TeV-amcatnlo-pythia8_TuneCUETP8M1/[Spring16mAOD]-v1/MINIAODSIM                            & 70.31 \\
                       %      & \verb /ST_t-channel_4f_leptonDecays_13TeV-amcatnlo-pythia8_TuneCUETP8M1/[Spring16mAOD]_ext1-v1/MINIAODSIM                       & 70.31 \\
+                            & \verb /ST_tWll_5f_LO_13TeV-MadGraph-pythia8/[Spring16mAOD+]-v1/MINIAODSIM                                                       & 0.0112 \\
+                            & \verb /ST_tWnunu_5f_LO_13TeV-MadGraph-pythia8/[Spring16mAOD+]-v1/MINIAODSIM                                                     & 0.0222 \\
      $t\bar{t}Z$      %      & \verb /TTZToQQ_TuneCUETP8M1_13TeV-amcatnlo-pythia8/[Spring16mAOD]-v1/MINIAODSIM                                                 & 0.5297 \\
                       %      & \verb /TTZToLLNuNu_M-10_TuneCUETP8M1_13TeV-amcatnlo-pythia8/[Spring16mAOD]-v1/MINIAODSIM                                        & 0.2529 \\
                             & \verb /ttZJets_13TeV_madgraphMLM/[Spring16mAOD]]-v1/MINIAODSIM                                                                  & 0.7826 \\
      $t\bar{t}W$            & \verb /TTWJetsToLNu_TuneCUETP8M1_13TeV-amcatnloFXFX-madspin-pythia8/[Spring16mAOD]-v1/MINIAODSIM                                & 0.2043 \\
                             & \verb /TTWJetsToQQ_TuneCUETP8M1_13TeV-amcatnloFXFX-madspin-pythia8/[Spring16mAOD]-v1/MINIAODSIM                                 & 0.4062 \\
      $t\bar{t}H$            & \verb /ttHJetToNonbb_M125_13TeV_amcatnloFXFX_madspin_pythia8_mWCutfix/[Spring16mAOD*]_ext1-v2\MINIAODSIM                        & 0.2151 \\
+                            & \verb /ttHJetTobb_M125_13TeV_amcatnloFXFX_madspin_pythia8/[Spring16mAOD*]_ext3-v2/MINIAODSIM                                    & 0.2934 \\
      $tZq$                  & \verb /tZq_ll_4f_13TeV-amcatnlo-pythia8_TuneCUETP8M1/[Spring16mAOD]-v1/MINIAODSIM                                               & 0.0758 \\
+                            & \verb /tZq_nunu_4f_13TeV-amcatnlo-pythia8_TuneCUETP8M1/[Spring16mAOD+]-v1/MINIAODSIM                                            & 0.1379 \\
                      %       & \verb /tZq_nunu_4f_13TeV-amcatnlo-pythia8_TuneCUETP8M1/[Spring16mAOD]-v1/MINIAODSIM 					    & 0.1379 \\
 %    $t\bar{t}\gamma$       & \verb /TTGJets_TuneCUETP8M1_13TeV-amcatnloFXFX-madspin-pythia8/[Spring16mAOD]-v1/MINIAODSIM                                     & 3.697 \\
      $WW, WZ, ZZ$           & \verb /WWTo1L1Nu2Q_13TeV_amcatnloFXFX_madspin_pythia8/[Spring16mAOD]-v1/MINIAODSIM                                              & 49.997 \\
@@ -52,8 +58,9 @@
                             & \verb /ZZZ_TuneCUETP8M1_13TeV-amcatnlo-pythia8/[Spring16mAOD]-v1/MINIAODSIM                                                     & 0.01398 \\
   \end{tabular}\\
   \vspace{2mm}
-    \verb [Spring16mAOD] = \verb RunIISpring16MiniAODv2-PUSpring16_80X_mcRun2_asymptotic_2016_miniAODv2_v0 \\
+    \verb [Spring16mAOD]  = \verb RunIISpring16MiniAODv2-PUSpring16_80X_mcRun2_asymptotic_2016_miniAODv2_v0 \\
     \verb [Spring16mAOD*] = \verb RunIISpring16MiniAODv2-PUSpring16RAWAODSIM_80X_mcRun2_asymptotic_2016_miniAODv2_v0 \\
+    \verb [Spring16mAOD+] = \verb RunIISpring16MiniAODv2-premix_withHLT_80X_mcRun2_asymptotic_v14 \\
   \caption{Background samples}
   \label{samples-backgrounds2016}
 \end{table}
